# algorithmic-blindness

./: .env.example  .gitignore  9DAY_PLAN.md  9day_plan_status.json  BASELINE_COMPARISON_SUMMARY.txt  BASELINE_COMPARISON_SUMMARY_FULL.md  COMMANDS.md  EXPECTED_RESULTS.md  METHODOLOGY.md  PROJECT_DOCUMENTATION.md  README.md  RESULTS.md  check_progress.py  config.json  pyproject.toml  requirements.txt  test_parsing.py  test_uai_enhancements.py
experiments/: run_experiments.py
plots/: fci_summary_table.txt  results_summary.tex
prompts/: __init__.py  analyze_prompt_variance.py  prompt_templates.py
results/variance/: asia_fci_llm_prompt.txt  cancer_fci_llm_prompt.txt  child_fci_llm_prompt.txt  earthquake_fci_llm_prompt.txt  sachs_fci_llm_prompt.txt  survey_fci_llm_prompt.txt  synthetic_12_fci_llm_prompt.txt  synthetic_30_fci_llm_prompt.txt  titanic_fci_llm_prompt.txt
src/algorithms/: analyze_results.py  per_dataset_memorization_analysis.py  perturbed_benchmark_test.py  run_experiments.py  statistical_analysis.py  variance_analysis.py
src/analysis/: statistical_tests.py
src/baselines/: baseline_comparison_full_results.json  baseline_comparison_results.json  compare_baselines.py  compare_baselines_full.py  simple_baselines.py
src/datasets/: __init__.py  credit_approval.py  wine_quality.py
src/evaluation/: compute_metrics.py  generate_tables.py  metrics.py
src/experiments/: analyze_existing_results.py  analyze_results.py  compare_algo_vs_llm.py  llama_variants_test.py  memorization_consistency_check.py  memorization_variance_analysis.py  run_experiments.py  (+4 more)
(+1326 files in other folders)
